--- a/package.json
+++ b/package.json
@@ -24,8 +24,15 @@
     "@angular/router": "~13.1.0",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "firebase": "^9.4.0",
     "jquery": "^3.6.0",
+    "ngx-quill": "^16.1.1",
+    "quill": "^1.3.7",
+    "quill-emoji": "^0.2.0",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-mention": "^2.2.7",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -37,6 +44,7 @@
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/quill": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
