--- a/angular.json
+++ b/angular.json
@@ -108,7 +108,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/quill/dist/quill.bubble.css",
               "./node_modules/quill/dist/quill.snow.css",
-              "./node_modules/quill/dist/quill.core.css"
+              "./node_modules/quill/dist/quill.core.css",
+              "node_modules/quill-emoji/dist/quill-emoji.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
