--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.13",
     "@types/node": "^12.11.1",
     "@types/quill": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
