--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.8.1",
     "firebase": "^9.4.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "ngx-quill": "^16.1.1",
     "quill": "^1.3.7",
     "quill-emoji": "^0.2.0",
