--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "firebase": "^9.4.0",
-    "jquery": "^3.6.0",
+    "mdb-angular-ui-kit": "^2.0.0",
     "moment": "^2.29.1",
     "ngx-quill": "^16.1.1",
     "quill": "^1.3.7",
@@ -45,7 +45,6 @@
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
-    "@types/jquery": "^3.5.13",
     "@types/node": "^12.11.1",
     "@types/quill": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
