changed the complaints form, init upload papeo component and changed the new-card

--- a/angular.json
+++ b/angular.json
@@ -36,16 +36,13 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/quill/dist/quill.bubble.css",
               "./node_modules/quill/dist/quill.snow.css",
               "./node_modules/quill/dist/quill.core.css",
               "node_modules/quill-emoji/dist/quill-emoji.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "./node_modules/quill/dist/quill.js"
             ]
           },
@@ -115,16 +112,13 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/quill/dist/quill.bubble.css",
               "./node_modules/quill/dist/quill.snow.css",
               "./node_modules/quill/dist/quill.core.css",
               "node_modules/quill-emoji/dist/quill-emoji.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "./node_modules/quill/dist/quill.js"
             ]
           }
@@ -134,9 +128,9 @@
           "options": {
             "prerender": false,
             "ssr": false,
-            "browserTarget": "pageCEMET:build:production",
-            "firebaseProject": "pagecemet",
-            "firebaseHostingSite": "pagecemet"
+            "browserTarget": "cemetusach:build:production",
+            "firebaseProject": "cemet-d0bf6",
+            "firebaseHostingSite": "cemetusach"
           }
         }
       }
