--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@maxim_mazurok/gapi.client.drive": "^3.0.20220301",
     "@popperjs/core": "^2.11.2",
+    "@types/gapi.client.drive": "^3.0.13",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.1",
     "firebase": "^9.4.0",
-    "mdb-angular-ui-kit": "^2.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "ng-gapi": "^0.0.94",
+    "ngx-bootstrap": "^8.0.0",
     "ngx-quill": "^16.1.1",
     "quill": "^1.3.7",
     "quill-emoji": "^0.2.0",
@@ -45,6 +48,7 @@
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
+    "@types/lodash": "^4.14.179",
     "@types/node": "^12.11.1",
     "@types/quill": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
