--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
+    "types": [],
     "lib": [
       "es2020",
       "dom"
