added button of delete new in home and added meta tag and redirect link

--- a/angular.json
+++ b/angular.json
@@ -42,8 +42,9 @@
               "node_modules/quill-emoji/dist/quill-emoji.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "./node_modules/quill/dist/quill.js"
+              "./node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/quill/dist/quill.js"
             ]
           },
           "configurations": {
@@ -118,8 +119,9 @@
               "node_modules/quill-emoji/dist/quill-emoji.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "./node_modules/quill/dist/quill.js"
+              "./node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/quill/dist/quill.js"
             ]
           }
         },
