--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "quill-mention": "^2.2.7",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
+    "safe-pipe": "^2.0.2",
     "ts-google-drive": "^0.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
