--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -52,18 +51,12 @@
     "@types/lodash": "^4.14.179",
     "@types/node": "^12.11.1",
     "@types/quill": "^2.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "prettier": "^2.5.1",
-    "prettier-eslint": "^13.0.0",
     "typescript": "~4.5.2"
   }
 }
