--- a/angular.json
+++ b/angular.json
@@ -35,16 +35,11 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss",
-              "./node_modules/quill/dist/quill.bubble.css",
-              "./node_modules/quill/dist/quill.snow.css",
-              "./node_modules/quill/dist/quill.core.css",
-              "node_modules/quill-emoji/dist/quill-emoji.css"
+              "src/styles.scss"
             ],
             "scripts": [
               "./node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/quill/dist/quill.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
@@ -112,16 +107,11 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss",
-              "./node_modules/quill/dist/quill.bubble.css",
-              "./node_modules/quill/dist/quill.snow.css",
-              "./node_modules/quill/dist/quill.core.css",
-              "node_modules/quill-emoji/dist/quill-emoji.css"
+              "src/styles.scss"
             ],
             "scripts": [
               "./node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/quill/dist/quill.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           }
         },
